--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -172,7 +172,7 @@
    "outputs": [],
    "source": [
     "# Download Anything V3 Model\n",
-    "civitai_download(model_version_id=34373, local_dir=sd15_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=34373, local_dir=sd15_ckpt_dir)"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "outputs": [],
    "source": [
     "# Download Anything V5 Model\n",
-    "civitai_download(model_version_id=30163, local_dir=sd15_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=30163, local_dir=sd15_ckpt_dir)"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "outputs": [],
    "source": [
     "# Download Anything Ink Model\n",
-    "civitai_download(model_version_id=90854, local_dir=sd15_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=90854, local_dir=sd15_ckpt_dir)"
    ]
   },
   {
@@ -237,7 +237,7 @@
    "outputs": [],
    "source": [
     "# Download ChilloutMix Ni pruned fp32 fix Model\n",
-    "civitai_download(model_version_id=11745, local_dir=sd15_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=11745, local_dir=sd15_ckpt_dir)"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "outputs": [],
    "source": [
     "# Download ChilloutMix Ni pruned fp16 fix Model\n",
-    "civitai_download(model_version_id=11732, local_dir=sd15_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=11732, local_dir=sd15_ckpt_dir)"
    ]
   },
   {
@@ -277,7 +277,7 @@
    "outputs": [],
    "source": [
     "# Download MeinaMix Model\n",
-    "civitai_download(model_version_id=948574, local_dir=sd15_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=948574, local_dir=sd15_ckpt_dir)"
    ]
   },
   {
@@ -444,7 +444,7 @@
    "outputs": [],
    "source": [
     "# Download Anything VAE\n",
-    "civitai_download(model_version_id=119279, local_dir=sd15_vae_dir, token=token)"
+    "civitai_download(model_version_id=119279, local_dir=sd15_vae_dir)"
    ]
   },
   {
@@ -454,7 +454,7 @@
    "outputs": [],
    "source": [
     "# Download ClearVAE\n",
-    "civitai_download(model_version_id=88156, local_dir=sd15_vae_dir, token=token)"
+    "civitai_download(model_version_id=88156, local_dir=sd15_vae_dir)"
    ]
   },
   {
@@ -485,7 +485,7 @@
    "outputs": [],
    "source": [
     "# Download ShortBang Concept LoRA\n",
-    "civitai_download(model_version_id=122064, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=122064, local_dir=sd15_lora_dir)"
    ]
   },
   {
@@ -495,7 +495,7 @@
    "outputs": [],
    "source": [
     "# Download Disembodied Head V2 LoRA\n",
-    "civitai_download(model_version_id=100482, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=100482, local_dir=sd15_lora_dir)"
    ]
   },
   {
@@ -505,7 +505,7 @@
    "outputs": [],
    "source": [
     "# Download Dullahan LoRA\n",
-    "civitai_download(model_version_id=186885, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=186885, local_dir=sd15_lora_dir)"
    ]
   },
   {
@@ -515,7 +515,7 @@
    "outputs": [],
    "source": [
     "# Download HeadinJar LoRA\n",
-    "civitai_download(model_version_id=77230, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=77230, local_dir=sd15_lora_dir)"
    ]
   },
   {
@@ -525,7 +525,7 @@
    "outputs": [],
    "source": [
     "# Download Kirito LoRA\n",
-    "civitai_download(model_version_id=141405, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=141405, local_dir=sd15_lora_dir)"
    ]
   },
   {
@@ -535,7 +535,7 @@
    "outputs": [],
    "source": [
     "# Download Eugeo LoRA\n",
-    "civitai_download(model_version_id=158391, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=158391, local_dir=sd15_lora_dir)"
    ]
   },
   {
@@ -545,7 +545,7 @@
    "outputs": [],
    "source": [
     "# Download Tomboy LoRA\n",
-    "civitai_download(model_version_id=120588, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=120588, local_dir=sd15_lora_dir)"
    ]
   },
   {
@@ -555,7 +555,7 @@
    "outputs": [],
    "source": [
     "# Download TomboyBuzzcut1-2-0805 LoRA\n",
-    "civitai_download(model_version_id=91509, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=91509, local_dir=sd15_lora_dir)"
    ]
   },
   {
@@ -565,7 +565,7 @@
    "outputs": [],
    "source": [
     "# Download Princess Carry LoRA\n",
-    "civitai_download(model_version_id=112975, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=112975, local_dir=sd15_lora_dir)"
    ]
   },
   {
@@ -575,7 +575,7 @@
    "outputs": [],
    "source": [
     "# Download Shima920 V2 LoRA\n",
-    "civitai_download(model_version_id=92833, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=92833, local_dir=sd15_lora_dir)"
    ]
   },
   {
@@ -585,7 +585,7 @@
    "outputs": [],
    "source": [
     "# Download Anime Enhancer Midrange LoRA\n",
-    "civitai_download(model_version_id=215522, local_dir=sd15_lora_dir, token=token)"
+    "civitai_download(model_version_id=215522, local_dir=sd15_lora_dir)"
    ]
   },
   {
@@ -627,7 +627,7 @@
    "outputs": [],
    "source": [
     "# Download bad-hand-v4\n",
-    "civitai_download(model_version_id=230261, local_dir=sd15_embedding_dir, token=token)"
+    "civitai_download(model_version_id=230261, local_dir=sd15_embedding_dir)"
    ]
   },
   {
@@ -677,7 +677,7 @@
    "outputs": [],
    "source": [
     "# Download Deep Negative V1 75 T\n",
-    "civitai_download(model_version_id=5637, local_dir=sd15_embedding_dir, token=token)"
+    "civitai_download(model_version_id=5637, local_dir=sd15_embedding_dir)"
    ]
   },
   {
@@ -687,7 +687,7 @@
    "outputs": [],
    "source": [
     "# Download veryBadImageNegative\n",
-    "civitai_download(model_version_id=25820, local_dir=sd15_embedding_dir, token=token)"
+    "civitai_download(model_version_id=25820, local_dir=sd15_embedding_dir)"
    ]
   },
   {
@@ -697,7 +697,7 @@
    "outputs": [],
    "source": [
     "# Download GS-Boyish\n",
-    "civitai_download(model_version_id=95611, local_dir=sd15_embedding_dir, token=token)"
+    "civitai_download(model_version_id=95611, local_dir=sd15_embedding_dir)"
    ]
   },
   {
@@ -1014,7 +1014,7 @@
    "outputs": [],
    "source": [
     "# Download Anything XL Model\n",
-    "civitai_download(model_version_id=384264, local_dir=sdxl_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=384264, local_dir=sdxl_ckpt_dir)"
    ]
   },
   {
@@ -1034,7 +1034,7 @@
    "outputs": [],
    "source": [
     "# Download Gamma XL NSFW for Anything XL Model\n",
-    "civitai_download(model_version_id=412021, local_dir=sdxl_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=412021, local_dir=sdxl_ckpt_dir)"
    ]
   },
   {
@@ -1044,7 +1044,7 @@
    "outputs": [],
    "source": [
     "# Download Kohaku XL Epsilon Model\n",
-    "civitai_download(model_version_id=546178, local_dir=sdxl_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=546178, local_dir=sdxl_ckpt_dir)"
    ]
   },
   {
@@ -1074,7 +1074,7 @@
    "outputs": [],
    "source": [
     "# Download NoobAI XL Model\n",
-    "civitai_download(model_version_id=968495, local_dir=sdxl_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=968495, local_dir=sdxl_ckpt_dir)"
    ]
   },
   {
@@ -1162,7 +1162,7 @@
    "outputs": [],
    "source": [
     "# Download Envy Tomboy Slider XL LoRA\n",
-    "civitai_download(model_version_id=251963, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=251963, local_dir=sdxl_lora_dir)"
    ]
   },
   {
@@ -1172,7 +1172,7 @@
    "outputs": [],
    "source": [
     "# Download SAO Kirito SDXL Satu LoRA\n",
-    "civitai_download(model_version_id=489270, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=489270, local_dir=sdxl_lora_dir)"
    ]
   },
   {
@@ -1182,7 +1182,7 @@
    "outputs": [],
    "source": [
     "# Download XL Eugeo SAO Animagine XL 3.1 LoRA\n",
-    "civitai_download(model_version_id=437049, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=437049, local_dir=sdxl_lora_dir)"
    ]
   },
   {
@@ -1192,7 +1192,7 @@
    "outputs": [],
    "source": [
     "# Download Sailorboy XL LoRA\n",
-    "civitai_download(model_version_id=134460, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=134460, local_dir=sdxl_lora_dir)"
    ]
   },
   {
@@ -1202,7 +1202,7 @@
    "outputs": [],
    "source": [
     "# Download SDXL Disembodied head Headless LoRA\n",
-    "civitai_download(model_version_id=515553, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=515553, local_dir=sdxl_lora_dir)"
    ]
   },
   {
@@ -1212,7 +1212,7 @@
    "outputs": [],
    "source": [
     "# Download [Yue] Paintingboys SDXL LoRA\n",
-    "civitai_download(model_version_id=144865, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=144865, local_dir=sdxl_lora_dir)"
    ]
   },
   {
@@ -1222,7 +1222,7 @@
    "outputs": [],
    "source": [
     "# Download A Short cut v3 SDXL LoRA\n",
-    "civitai_download(model_version_id=298618, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=298618, local_dir=sdxl_lora_dir)"
    ]
   },
   {
@@ -1232,7 +1232,7 @@
    "outputs": [],
    "source": [
     "# Download Breasts Slider LoRA\n",
-    "civitai_download(model_version_id=173866, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=173866, local_dir=sdxl_lora_dir)"
    ]
   },
   {
@@ -1242,7 +1242,7 @@
    "outputs": [],
    "source": [
     "# Download SDXL Dark Knight LoRA\n",
-    "civitai_download(model_version_id=570644, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=570644, local_dir=sdxl_lora_dir)"
    ]
   },
   {
@@ -1252,7 +1252,7 @@
    "outputs": [],
    "source": [
     "# Download Enhancer V4 XL LoRA\n",
-    "civitai_download(model_version_id=497695, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=497695, local_dir=sdxl_lora_dir)"
    ]
   },
   {
@@ -1262,7 +1262,7 @@
    "outputs": [],
    "source": [
     "# Download Add Details XL LoRA\n",
-    "civitai_download(model_version_id=436121, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=436121, local_dir=sdxl_lora_dir)"
    ]
   },
   {
@@ -1272,7 +1272,7 @@
    "outputs": [],
    "source": [
     "# Download Head Swap (Male Head on Female Body) Animagine XL 3.1 LoRA\n",
-    "civitai_download(model_version_id=513742, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=513742, local_dir=sdxl_lora_dir)"
    ]
   },
   {
@@ -1282,7 +1282,7 @@
    "outputs": [],
    "source": [
     "# Download Head Swap (Female Head on Male Body) Animagine XL 3.1 LoRA\n",
-    "civitai_download(model_version_id=429832, local_dir=sdxl_lora_dir, token=token)"
+    "civitai_download(model_version_id=429832, local_dir=sdxl_lora_dir)"
    ]
   },
   {
@@ -1350,7 +1350,7 @@
    "outputs": [],
    "source": [
     "# Download DeepNegative XL\n",
-    "civitai_download(model_version_id=454217, local_dir=sdxl_embedding_dir, token=token)"
+    "civitai_download(model_version_id=454217, local_dir=sdxl_embedding_dir)"
    ]
   },
   {
@@ -1360,7 +1360,7 @@
    "outputs": [],
    "source": [
     "# Download Negative XL\n",
-    "civitai_download(model_version_id=261856, local_dir=sdxl_embedding_dir, token=token)"
+    "civitai_download(model_version_id=261856, local_dir=sdxl_embedding_dir)"
    ]
   },
   {
@@ -1370,7 +1370,7 @@
    "outputs": [],
    "source": [
     "# Download Negative XL V2\n",
-    "civitai_download(model_version_id=264111, local_dir=sdxl_embedding_dir, token=token)"
+    "civitai_download(model_version_id=264111, local_dir=sdxl_embedding_dir)"
    ]
   },
   {
@@ -1380,7 +1380,7 @@
    "outputs": [],
    "source": [
     "# Download Negative XL Color_Balance_Calibration_0.8\n",
-    "civitai_download(model_version_id=431425, local_dir=sdxl_embedding_dir, token=token)"
+    "civitai_download(model_version_id=431425, local_dir=sdxl_embedding_dir)"
    ]
   },
   {
@@ -1638,7 +1638,7 @@
    "outputs": [],
    "source": [
     "# Download Pony Diffusion XL V6 Model\n",
-    "civitai_download(model_version_id=290640, local_dir=pony_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=290640, local_dir=pony_ckpt_dir)"
    ]
   },
   {
@@ -1648,7 +1648,7 @@
    "outputs": [],
    "source": [
     "# Download AutismMix Pony Model\n",
-    "civitai_download(model_version_id=324619, local_dir=pony_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=324619, local_dir=pony_ckpt_dir)"
    ]
   },
   {
@@ -1658,7 +1658,7 @@
    "outputs": [],
    "source": [
     "# Download 7th Anime XL Pony Model\n",
-    "civitai_download(model_version_id=441236, local_dir=pony_ckpt_dir, token=token)"
+    "civitai_download(model_version_id=441236, local_dir=pony_ckpt_dir)"
    ]
   },
   {
@@ -1685,7 +1685,7 @@
    "outputs": [],
    "source": [
     "# Download Pony Standard VAE\n",
-    "civitai_download(model_version_id=739304, local_dir=pony_vae_dir, token=token)"
+    "civitai_download(model_version_id=739304, local_dir=pony_vae_dir)"
    ]
   },
   {
@@ -1695,7 +1695,7 @@
    "outputs": [],
    "source": [
     "# Download Pony Enhanced VAE Pastels\n",
-    "civitai_download(model_version_id=739267, local_dir=pony_vae_dir, token=token)"
+    "civitai_download(model_version_id=739267, local_dir=pony_vae_dir)"
    ]
   },
   {
@@ -1712,7 +1712,7 @@
    "outputs": [],
    "source": [
     "# Download Head Swap (Male Head on Female Body) Pony\n",
-    "civitai_download(model_version_id=528192, local_dir=pony_lora_dir, token=token)"
+    "civitai_download(model_version_id=528192, local_dir=pony_lora_dir)"
    ]
   },
   {
@@ -1722,7 +1722,7 @@
    "outputs": [],
    "source": [
     "# Download Head Swap (Female Head on Male Body) Pony\n",
-    "civitai_download(model_version_id=528196, local_dir=pony_lora_dir, token=token)"
+    "civitai_download(model_version_id=528196, local_dir=pony_lora_dir)"
    ]
   },
   {
@@ -1732,7 +1732,7 @@
    "outputs": [],
    "source": [
     "# Download SDXL Pony Headless\n",
-    "civitai_download(model_version_id=357744, local_dir=pony_lora_dir, token=token)"
+    "civitai_download(model_version_id=357744, local_dir=pony_lora_dir)"
    ]
   },
   {
@@ -1742,7 +1742,7 @@
    "outputs": [],
    "source": [
     "# Download SDXL Pony Disembodied Head\n",
-    "civitai_download(model_version_id=360519, local_dir=pony_lora_dir, token=token)"
+    "civitai_download(model_version_id=360519, local_dir=pony_lora_dir)"
    ]
   },
   {
@@ -1752,7 +1752,7 @@
    "outputs": [],
    "source": [
     "# Download Tomboy Style Pony\n",
-    "civitai_download(model_version_id=647477, local_dir=pony_lora_dir, token=token)"
+    "civitai_download(model_version_id=647477, local_dir=pony_lora_dir)"
    ]
   },
   {
@@ -2006,7 +2006,7 @@
    "outputs": [],
    "source": [
     "# Download Tomboy for Flux LoRA\n",
-    "civitai_download(model_version_id=797322, local_dir=flux_lora_dir, token=token)"
+    "civitai_download(model_version_id=797322, local_dir=flux_lora_dir)"
    ]
   },
   {
