--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -62,9 +62,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from huggingface_hub import notebook_login, hf_hub_download, snapshot_download\n",
+    "from huggingface_hub import login, hf_hub_download, snapshot_download\n",
     "\n",
-    "notebook_login()"
+    "login()"
    ]
   },
   {
