--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -1667,6 +1667,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download Hassaku XL (Pony) Model\n",
+    "civitai_download(model_version_id=575495, local_dir=pony_ckpt_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download Pony Pencil XL Model\n",
     "hf_hub_download(repo_id=\"bluepen5805/pony_pencil-XL\", filename=\"pony_pencil-XL-v2.0.0.safetensors\", local_dir=pony_ckpt_dir)"
    ]
