--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -1682,6 +1682,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download T-ponynai3 Model\n",
+    "civitai_download(model_version_id=814910, local_dir=pony_ckpt_dir)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
