--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -16,9 +16,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./models/checkpoints/sd15 already exists\n",
+      "./models/checkpoints/sd2 already exists\n",
+      "./models/checkpoints/sdxl already exists\n",
+      "./models/checkpoints/pony already exists\n",
+      "./models/checkpoints/ilxl already exists\n",
+      "./models/checkpoints/sd3 already exists\n",
+      "./models/checkpoints/flux1 already exists\n",
+      "./models/checkpoints/upscale already exists\n",
+      "./models/vae/sd15 already exists\n",
+      "./models/vae/sd2 already exists\n",
+      "./models/vae/sdxl already exists\n",
+      "./models/vae/pony already exists\n",
+      "./models/vae/ilxl already exists\n",
+      "./models/vae/sd3 already exists\n",
+      "./models/vae/flux1 already exists\n",
+      "./models/loras/sd15 already exists\n",
+      "./models/loras/sd2 already exists\n",
+      "./models/loras/sdxl already exists\n",
+      "./models/loras/pony already exists\n",
+      "./models/loras/ilxl already exists\n",
+      "./models/loras/sd3 already exists\n",
+      "./models/loras/flux1 already exists\n",
+      "./models/embeddings/sd15 already exists\n",
+      "./models/embeddings/sd2 already exists\n",
+      "./models/embeddings/sdxl already exists\n",
+      "./models/embeddings/sd3 already exists\n",
+      "./models/embeddings/flux1 already exists\n",
+      "./models/controlnet/sd15 already exists\n",
+      "./models/controlnet/sd2 already exists\n",
+      "./models/controlnet/sdxl already exists\n",
+      "./models/controlnet/sd3 already exists\n",
+      "./models/controlnet/flux1 already exists\n",
+      "./models/clip/sd3 already exists\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "import shutil\n",
@@ -58,9 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User is already logged in.\n"
+     ]
+    }
+   ],
    "source": [
     "from huggingface_hub import notebook_login, hf_hub_download, snapshot_download\n",
     "\n",
@@ -76,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,12 +205,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "12a8174fc47f4ac9b3e77fea18001091",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "v1-5-pruned-emaonly.safetensors:   0%|          | 0.00/4.27G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'models/checkpoints/sd15/v1-5-pruned-emaonly.safetensors'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Download Stable Diffusion 1.5 Model\n",
-    "hf_hub_download(repo_id=\"stable-diffusion-v1-5/stable-diffusion-v1-5\", filename=\"v1-5-pruned-emaonly.safetensors\", local_dir=sd15_ckpt_dir)"
+    "hf_hub_download(repo_id=\"runwayml/stable-diffusion-v1-5\", filename=\"v1-5-pruned-emaonly.safetensors\", local_dir=sd15_ckpt_dir)"
    ]
   },
   {
@@ -162,7 +245,7 @@
    "outputs": [],
    "source": [
     "# Download Stable Diffusion 1.5 Inpaint Model\n",
-    "hf_hub_download(repo_id=\"stable-diffusion-v1-5/stable-diffusion-inpainting\", filename=\"sd-v1-5-inpainting.ckpt\", local_dir=sd15_ckpt_dir)"
+    "hf_hub_download(repo_id=\"runwayml/stable-diffusion-inpainting\", filename=\"sd-v1-5-inpainting.ckpt\", local_dir=sd15_ckpt_dir)"
    ]
   },
   {
@@ -969,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,9 +1092,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CivitAI API token already exists.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('https://civitai.com/api/download/models/384264',\n",
+       " 'AnythingXL_xl.safetensors',\n",
+       " 6938041578,\n",
+       " './models/checkpoints/sdxl',\n",
+       " None)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2060580d5a944d918f1d0de1780a92a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='<b>Downloading</b> AnythingXL_xl.safetensors'), HBox(children=(IntProgress(value=0,…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Download Anything XL Model\n",
     "civitai_download(model_version_id=384264, local_dir=sdxl_ckpt_dir)"
