--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -16,59 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./models/checkpoints/sd15 already exists\n",
-      "./models/checkpoints/sd2 already exists\n",
-      "./models/checkpoints/sdxl already exists\n",
-      "./models/checkpoints/pony already exists\n",
-      "./models/checkpoints/ilxl already exists\n",
-      "./models/checkpoints/sd3 already exists\n",
-      "./models/checkpoints/flux1 already exists\n",
-      "./models/checkpoints/upscale already exists\n",
-      "./models/vae/sd15 already exists\n",
-      "./models/vae/sd2 already exists\n",
-      "./models/vae/sdxl already exists\n",
-      "./models/vae/pony already exists\n",
-      "./models/vae/ilxl already exists\n",
-      "./models/vae/sd3 already exists\n",
-      "./models/vae/flux1 already exists\n",
-      "./models/loras/sd15 already exists\n",
-      "./models/loras/sd2 already exists\n",
-      "./models/loras/sdxl already exists\n",
-      "./models/loras/pony already exists\n",
-      "./models/loras/ilxl already exists\n",
-      "./models/loras/sd3 already exists\n",
-      "./models/loras/flux1 already exists\n",
-      "./models/embeddings/sd15 already exists\n",
-      "./models/embeddings/sd2 already exists\n",
-      "./models/embeddings/sdxl already exists\n",
-      "./models/embeddings/sd3 already exists\n",
-      "./models/embeddings/flux1 already exists\n",
-      "./models/controlnet/sd15 already exists\n",
-      "./models/controlnet/sd2 already exists\n",
-      "./models/controlnet/sdxl already exists\n",
-      "./models/controlnet/sd3 already exists\n",
-      "./models/controlnet/flux1 already exists\n",
-      "./models/clip/sd3 already exists\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[None]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import shutil\n",
@@ -108,17 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User is already logged in.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from huggingface_hub import notebook_login, hf_hub_download, snapshot_download\n",
     "\n",
@@ -205,34 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12a8174fc47f4ac9b3e77fea18001091",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "v1-5-pruned-emaonly.safetensors:   0%|          | 0.00/4.27G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'models/checkpoints/sd15/v1-5-pruned-emaonly.safetensors'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download Stable Diffusion 1.5 Model\n",
     "hf_hub_download(repo_id=\"runwayml/stable-diffusion-v1-5\", filename=\"v1-5-pruned-emaonly.safetensors\", local_dir=sd15_ckpt_dir)"
@@ -1092,45 +1009,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CivitAI API token already exists.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('https://civitai.com/api/download/models/384264',\n",
-       " 'AnythingXL_xl.safetensors',\n",
-       " 6938041578,\n",
-       " './models/checkpoints/sdxl',\n",
-       " None)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2060580d5a944d918f1d0de1780a92a2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='<b>Downloading</b> AnythingXL_xl.safetensors'), HBox(children=(IntProgress(value=0,…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download Anything XL Model\n",
     "civitai_download(model_version_id=384264, local_dir=sdxl_ckpt_dir)"
@@ -1402,6 +1283,16 @@
    "source": [
     "# Download Head Swap (Female Head on Male Body) Animagine XL 3.1 LoRA\n",
     "civitai_download(model_version_id=429832, local_dir=sdxl_lora_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Original Character - 南飛鳥(Minami Asuka) XL for Animagine XL 3.1 LoRA\n",
+    "hf_hub_download(repo_id=\"bean980310/minami_asuka_xl_animagine\", filename=\"minami_asuka_xl_animagine-10.safetensors\", local_dir=sdxl_lora_dir)"
    ]
   },
   {
